fixed js src link

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <p id= "left"> Guesses Left: </p>
         <p id= "guesses"> Guesses so far: </p>
 </div>
-	<script type="text/javascript" src="game.js"> </script>
+	<script type="text/javascript" src="assets/javascript/game.js"> </script>
 </body>
 </html>
