--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Psychic Game</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head> 
 <body>
     <div class="container"> 
-        <h1> Psychic Game </h1>
-        <p> Guess what letter I'm thinking of </p>
-        <p id= "wins"> Wins: </p>
-        <p id= "losses"> Losses: </p>
-        <p id= "left"> Guesses Left: </p>
-        <p id= "guesses"> Guesses so far: </p>
-</div>
+        <h1>The Psychic Game</h1>
+        <p>Guess what letter I'm thinking of</p>
+        <p id="wins">Wins:</p>
+        <p id="losses">Losses:</p>
+        <p id="left">Guesses Left:</p>
+        <p id="guesses">Your Guesses so far:</p>
+    </div>
 	<script type="text/javascript" src="assets/javascript/game.js"> </script>
 </body>
 </html>
